# markov-chain-generator-jp-cli

./: Cargo.toml  LICENSE  README.md  Readme.md  labels.json
.github/: dependabot.yml
.github/workflows/: ci-rust.yaml  cleanup-cache.yaml  pr-rust.yml  release.yaml  release.yml  rust_ci.yml
src/: io.rs  libs.rs  main.rs  markov.rs  tokenize.rs
test/: sample.txt
