[package]
name = "markov-chain-generator-jp-cli"
version = "0.1.7"
edition = "2021"
authors = ["Ray Shirohara <RShirohara@gmail.com>"]
description = "Japanese markov chain generator."
readme = "Readme.md"
repository = "https://github.com/RShirohara/markov-chain-generator-jp-cli"
license = "MIT"
publish = false

[dependencies]
clap = { version = "4.0.7", features = ["derive"] }
lindera-core = "0.25.0"
lindera-dictionary = { version = "0.25.0", features = [
  "ipadic-neologd",
  "ipadic-neologd-compress",
] }
lindera-tokenizer = { version = "0.25.0", features = [
  "ipadic-neologd",
  "ipadic-neologd-compress",
] }
markov = "1.1.0"
regex = "1.6.0"

[[bin]]
name = "markov"
path = "src/main.rs"
