[package]
name = "markov-chain-generator-jp-cli"
version = "0.1.8"
edition = "2021"
authors = ["Ray Shirohara <RShirohara@gmail.com>"]
description = "Japanese markov chain generator."
readme = "Readme.md"
repository = "https://github.com/RShirohara/markov-chain-generator-jp-cli"
license = "MIT"
publish = false

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
lindera-core = "0.27.0"
lindera-dictionary = { version = "0.27.0", features = [
  "unidic",
  "unidic-compress",
] }
lindera-tokenizer = { version = "0.27.0", features = [
  "unidic",
  "unidic-compress",
] }
markov = "1.1.0"
regex = "1.9.6"

[[bin]]
name = "markov"
path = "src/main.rs"
